Make sure padding isn't as hard on mobile

--- a/static/scss/_mobile.scss
+++ b/static/scss/_mobile.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 766px) {
+  .c-page-body {
+    padding:$basePadding / 4;
+  }
+
   .c-full-mobile {
     width:100%;
   }
