--- a/static/scss/site.scss
+++ b/static/scss/site.scss
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6, p, span, b, div, i, u, button {
     @include transition((box-shadow 0.2s ease-in, border-radius 0.2s ease-in));
 
     &.selected {
-      box-shadow: 0 0 0 2px $blue;
+      box-shadow: 0 0 0 1px $blue;
     }
 
     &:nth-child(even).selected {
